k8s/overlays/prod/patches/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smt-ing
  annotations:
    cert-manager.io/cluster-issuer: seolmyeongtang-issuer
spec:
  tls:
    - hosts:
        - api.redundant4u.com
      secretName: api-redundant4u-tls-secret
  rules:
    - host: api.redundant4u.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: smt
                port:
                  number: 8090
          - path: /post
            pathType: Prefix
            backend:
              service:
                name: dummy-svc 
                port:
                  number: 11111
          - path: /vnc
            pathType: Prefix
            backend:
              service:
                name: vnc-proxy
                port:
                  number: 8080
